# JackyShooter

./: .gitignore  CMakeLists.txt  README.md  build.zig
assets/fonts/: open_sans_regular_24.fnt
assets/models/gun0/: gun0.mtl
assets/models/player/: player.mtl
assets/shaders/: default.frag  default.vert  gui.frag  gui.vert  skybox.frag  skybox.vert  world.frag  world.vert
include/KHR/: khrplatform.hpp
include/glad/: glad.h  glad.hpp
include/jacky-common/: client_actions.hpp  defs.hpp  message_reader.hpp  message_writer.hpp  server_actions.hpp  types.hpp
include/jcs/: camera.hpp  chat.hpp  connection.hpp  defs.hpp  file_parser.hpp  font.hpp  font_loader.hpp  game.hpp  game_screen.hpp  game_state.hpp  gui.hpp  info_screen.hpp  input_manager.hpp  main_screen.hpp  modal_screen.hpp  model.hpp  model_loader.hpp  name_screen.hpp  object.hpp  player_controller.hpp  renderer.hpp  screen.hpp  shader.hpp  skybox.hpp  texture.hpp
include/jcserver/: player.hpp  player_list.hpp  server.hpp  types.hpp
include/stb/: stb_image.h
src/: files.zig  game_state.zig  main.zig  shader.zig  texture.zig
src/jcs/: camera.cpp  chat.cpp  connection.cpp  file_parser.cpp  font.cpp  font_loader.cpp  game.cpp  game_screen.cpp  glad.cpp  gui.cpp  info_screen.cpp  input_manager.cpp  main.cpp  main_screen.cpp  modal_screen.cpp  model.cpp  model_loader.cpp  name_screen.cpp  object.cpp  player_controller.cpp  renderer.cpp  shader.cpp  skybox.cpp  stb_image.cpp  texture.cpp
src/jcserver/: main.cpp  player.cpp  player_list.cpp  server.cpp
